--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,25 +7,16 @@
     {
       "matches":["<all_urls>"],
       "js": [
-        "content.js"
+        "js/content.js"
       ]
     }
   ],
   "permissions": [ "activeTab" ],
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["js/background.js"]
   },
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Time Converter"
-  },
-  "commands": {
-    "toggle-feature-foo": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+Y",
-        "mac": "Command+Shift+Y"
-      },
-      "description": "Toggle feature foo"
-    }
   }
 }
